// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[InfoMessage] renders correctly Error 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      {
        "backgroundColor": "rgba(255,91,91,0.06)",
        "borderColor": "rgba(255,91,91,0.06)",
        "tintColor": "#FF5B5B",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 30,
              "textAlign": "center",
            },
            {
              "color": "#FF5B5B",
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] renders correctly Info 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      {
        "backgroundColor": "rgba(0,48,207,0.06)",
        "borderColor": "#0030CF",
        "tintColor": "#0030CF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 30,
              "textAlign": "center",
            },
            {
              "color": "#0030CF",
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] renders correctly Warning 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      {
        "backgroundColor": "rgba(248,191,76,0.06)",
        "borderColor": "#F8BF4C",
        "tintColor": "#F8BF4C",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 30,
              "textAlign": "center",
            },
            {
              "color": "#F8BF4C",
            },
            {
              "textAlign": "center",
            },
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] should render with icon Error 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      {
        "backgroundColor": "rgba(255,91,91,0.06)",
        "borderColor": "rgba(255,91,91,0.06)",
        "tintColor": "#FF5B5B",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "paddingRight": 10,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          {
            "uri": "IconInfo",
          }
        }
        style={
          [
            {
              "height": 31.428571428571427,
              "width": 31.428571428571427,
            },
            [
              {
                "tintColor": "#FF5B5B",
              },
            ],
          ]
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 30,
              "textAlign": "center",
            },
            {
              "color": "#FF5B5B",
            },
            {
              "textAlign": "left",
            },
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] should render with icon Info 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      {
        "backgroundColor": "rgba(0,48,207,0.06)",
        "borderColor": "#0030CF",
        "tintColor": "#0030CF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "paddingRight": 10,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          {
            "uri": "IconInfo",
          }
        }
        style={
          [
            {
              "height": 31.428571428571427,
              "width": 31.428571428571427,
            },
            [
              {
                "tintColor": "#0030CF",
              },
            ],
          ]
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 30,
              "textAlign": "center",
            },
            {
              "color": "#0030CF",
            },
            {
              "textAlign": "left",
            },
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`[InfoMessage] should render with icon Warning 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "borderRadius": 15,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      },
      undefined,
      {
        "backgroundColor": "rgba(248,191,76,0.06)",
        "borderColor": "#F8BF4C",
        "tintColor": "#F8BF4C",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "paddingRight": 10,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          {
            "uri": "IconInfo",
          }
        }
        style={
          [
            {
              "height": 31.428571428571427,
              "width": 31.428571428571427,
            },
            [
              {
                "tintColor": "#F8BF4C",
              },
            ],
          ]
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 30,
              "textAlign": "center",
            },
            {
              "color": "#F8BF4C",
            },
            {
              "textAlign": "left",
            },
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;
